// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prepare.sql > line 1 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 218,
                "relname": "pg_prepared_statements",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 166,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "location": 166,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 172,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "statement",
                        },
                      },
                    ],
                    "location": 172,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 183,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "parameter_types",
                        },
                      },
                    ],
                    "location": 183,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 200,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "result_types",
                        },
                      },
                    ],
                    "location": 200,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 6 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "PrepareStmt": {
          "name": "q1",
          "query": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 23,
                    "name": "a",
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 23,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 8 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "q1",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 9 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 61,
                "relname": "pg_prepared_statements",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 15,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "statement",
                        },
                      },
                    ],
                    "location": 15,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 26,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "parameter_types",
                        },
                      },
                    ],
                    "location": 26,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 43,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "result_types",
                        },
                      },
                    ],
                    "location": 43,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 11 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "PrepareStmt": {
          "name": "q1",
          "query": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 38,
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 2,
                        },
                        "location": 38,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 14 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeallocateStmt": {
          "name": "q1",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 17 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "PrepareStmt": {
          "name": "q1",
          "query": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 22,
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 2,
                        },
                        "location": 22,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 18 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "q1",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 19 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "PrepareStmt": {
          "name": "q2",
          "query": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 23,
                    "name": "b",
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 2,
                        },
                        "location": 23,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 21 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 60,
                "relname": "pg_prepared_statements",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 14,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "statement",
                        },
                      },
                    ],
                    "location": 14,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 25,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "parameter_types",
                        },
                      },
                    ],
                    "location": 25,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 42,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "result_types",
                        },
                      },
                    ],
                    "location": 42,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 22 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeallocateStmt": {
          "name": "q1",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 25 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 61,
                "relname": "pg_prepared_statements",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 15,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "statement",
                        },
                      },
                    ],
                    "location": 15,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 26,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "parameter_types",
                        },
                      },
                    ],
                    "location": 26,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 43,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "result_types",
                        },
                      },
                    ],
                    "location": 43,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 27 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeallocateStmt": {
          "name": "q2",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 29 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 106,
                "relname": "pg_prepared_statements",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 54,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "location": 54,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 60,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "statement",
                        },
                      },
                    ],
                    "location": 60,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 71,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "parameter_types",
                        },
                      },
                    ],
                    "location": 71,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 88,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "result_types",
                        },
                      },
                    ],
                    "location": 88,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 31 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "PrepareStmt": {
          "argtypes": [
            {
              "TypeName": {
                "location": 38,
                "names": [
                  {
                    "String": {
                      "sval": "text",
                    },
                  },
                ],
                "typemod": -1,
              },
            },
          ],
          "name": "q2",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 98,
                    "relname": "pg_database",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 55,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "datname",
                            },
                          },
                        ],
                        "location": 55,
                      },
                    },
                  },
                },
                {
                  "ResTarget": {
                    "location": 64,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "datistemplate",
                            },
                          },
                        ],
                        "location": 64,
                      },
                    },
                  },
                },
                {
                  "ResTarget": {
                    "location": 79,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "datallowconn",
                            },
                          },
                        ],
                        "location": 79,
                      },
                    },
                  },
                },
              ],
              "whereClause": {
                "A_Expr": {
                  "kind": "AEXPR_OP",
                  "lexpr": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "datname",
                          },
                        },
                      ],
                      "location": 116,
                    },
                  },
                  "location": 124,
                  "name": [
                    {
                      "String": {
                        "sval": "=",
                      },
                    },
                  ],
                  "rexpr": {
                    "ParamRef": {
                      "location": 126,
                      "number": 1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 36 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "q2",
          "params": [
            {
              "A_Const": {
                "location": 13,
                "sval": {
                  "sval": "postgres",
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 38 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "PrepareStmt": {
          "argtypes": [
            {
              "TypeName": {
                "location": 13,
                "names": [
                  {
                    "String": {
                      "sval": "text",
                    },
                  },
                ],
                "typemod": -1,
              },
            },
            {
              "TypeName": {
                "location": 19,
                "names": [
                  {
                    "String": {
                      "sval": "pg_catalog",
                    },
                  },
                  {
                    "String": {
                      "sval": "int4",
                    },
                  },
                ],
                "typemod": -1,
              },
            },
            {
              "TypeName": {
                "location": 24,
                "names": [
                  {
                    "String": {
                      "sval": "pg_catalog",
                    },
                  },
                  {
                    "String": {
                      "sval": "float8",
                    },
                  },
                ],
                "typemod": -1,
              },
            },
            {
              "TypeName": {
                "location": 31,
                "names": [
                  {
                    "String": {
                      "sval": "pg_catalog",
                    },
                  },
                  {
                    "String": {
                      "sval": "bool",
                    },
                  },
                ],
                "typemod": -1,
              },
            },
            {
              "TypeName": {
                "location": 40,
                "names": [
                  {
                    "String": {
                      "sval": "pg_catalog",
                    },
                  },
                  {
                    "String": {
                      "sval": "int2",
                    },
                  },
                ],
                "typemod": -1,
              },
            },
          ],
          "name": "q3",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 68,
                    "relname": "tenk1",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "sortClause": [
                {
                  "SortBy": {
                    "location": -1,
                    "node": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "unique1",
                            },
                          },
                        ],
                        "location": 170,
                      },
                    },
                    "sortby_dir": "SORTBY_DEFAULT",
                    "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                  },
                },
              ],
              "targetList": [
                {
                  "ResTarget": {
                    "location": 61,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "A_Star": {},
                          },
                        ],
                        "location": 61,
                      },
                    },
                  },
                },
              ],
              "whereClause": {
                "BoolExpr": {
                  "args": [
                    {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "lexpr": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "string4",
                                },
                              },
                            ],
                            "location": 80,
                          },
                        },
                        "location": 88,
                        "name": [
                          {
                            "String": {
                              "sval": "=",
                            },
                          },
                        ],
                        "rexpr": {
                          "ParamRef": {
                            "location": 90,
                            "number": 1,
                          },
                        },
                      },
                    },
                    {
                      "BoolExpr": {
                        "args": [
                          {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "four",
                                      },
                                    },
                                  ],
                                  "location": 98,
                                },
                              },
                              "location": 103,
                              "name": [
                                {
                                  "String": {
                                    "sval": "=",
                                  },
                                },
                              ],
                              "rexpr": {
                                "ParamRef": {
                                  "location": 105,
                                  "number": 2,
                                },
                              },
                            },
                          },
                          {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "ten",
                                      },
                                    },
                                  ],
                                  "location": 112,
                                },
                              },
                              "location": 116,
                              "name": [
                                {
                                  "String": {
                                    "sval": "=",
                                  },
                                },
                              ],
                              "rexpr": {
                                "TypeCast": {
                                  "arg": {
                                    "ParamRef": {
                                      "location": 118,
                                      "number": 3,
                                    },
                                  },
                                  "location": 120,
                                  "typeName": {
                                    "location": 122,
                                    "names": [
                                      {
                                        "String": {
                                          "sval": "pg_catalog",
                                        },
                                      },
                                      {
                                        "String": {
                                          "sval": "int8",
                                        },
                                      },
                                    ],
                                    "typemod": -1,
                                  },
                                },
                              },
                            },
                          },
                          {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "A_Const": {
                                  "boolval": {
                                    "boolval": true,
                                  },
                                  "location": 132,
                                },
                              },
                              "location": 137,
                              "name": [
                                {
                                  "String": {
                                    "sval": "=",
                                  },
                                },
                              ],
                              "rexpr": {
                                "ParamRef": {
                                  "location": 139,
                                  "number": 4,
                                },
                              },
                            },
                          },
                          {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "odd",
                                      },
                                    },
                                  ],
                                  "location": 145,
                                },
                              },
                              "location": 149,
                              "name": [
                                {
                                  "String": {
                                    "sval": "=",
                                  },
                                },
                              ],
                              "rexpr": {
                                "TypeCast": {
                                  "arg": {
                                    "ParamRef": {
                                      "location": 151,
                                      "number": 5,
                                    },
                                  },
                                  "location": 153,
                                  "typeName": {
                                    "location": 155,
                                    "names": [
                                      {
                                        "String": {
                                          "sval": "pg_catalog",
                                        },
                                      },
                                      {
                                        "String": {
                                          "sval": "int4",
                                        },
                                      },
                                    ],
                                    "typemod": -1,
                                  },
                                },
                              },
                            },
                          },
                        ],
                        "boolop": "OR_EXPR",
                        "location": 108,
                      },
                    },
                  ],
                  "boolop": "AND_EXPR",
                  "location": 93,
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 43 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "q3",
          "params": [
            {
              "A_Const": {
                "location": 13,
                "sval": {
                  "sval": "AAAAxx",
                },
              },
            },
            {
              "TypeCast": {
                "arg": {
                  "A_Const": {
                    "ival": {
                      "ival": 5,
                    },
                    "location": 23,
                  },
                },
                "location": 24,
                "typeName": {
                  "location": 26,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int2",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "TypeCast": {
                "arg": {
                  "A_Const": {
                    "fval": {
                      "fval": "10.5",
                    },
                    "location": 36,
                  },
                },
                "location": 40,
                "typeName": {
                  "location": 42,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "float8",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "A_Const": {
                "boolval": {},
                "location": 49,
              },
            },
            {
              "TypeCast": {
                "arg": {
                  "A_Const": {
                    "ival": {
                      "ival": 4,
                    },
                    "location": 56,
                  },
                },
                "location": 57,
                "typeName": {
                  "location": 59,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int8",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 45 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "q3",
          "params": [
            {
              "A_Const": {
                "location": 31,
                "sval": {
                  "sval": "bool",
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 48 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "q3",
          "params": [
            {
              "A_Const": {
                "location": 32,
                "sval": {
                  "sval": "bytea",
                },
              },
            },
            {
              "TypeCast": {
                "arg": {
                  "A_Const": {
                    "ival": {
                      "ival": 5,
                    },
                    "location": 41,
                  },
                },
                "location": 42,
                "typeName": {
                  "location": 44,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int2",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "TypeCast": {
                "arg": {
                  "A_Const": {
                    "fval": {
                      "fval": "10.5",
                    },
                    "location": 54,
                  },
                },
                "location": 58,
                "typeName": {
                  "location": 60,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "float8",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "A_Const": {
                "boolval": {},
                "location": 67,
              },
            },
            {
              "TypeCast": {
                "arg": {
                  "A_Const": {
                    "ival": {
                      "ival": 4,
                    },
                    "location": 74,
                  },
                },
                "location": 75,
                "typeName": {
                  "location": 77,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int8",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "A_Const": {
                "boolval": {
                  "boolval": true,
                },
                "location": 85,
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 51 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "q3",
          "params": [
            {
              "TypeCast": {
                "arg": {
                  "A_Const": {
                    "ival": {
                      "ival": 5,
                    },
                    "location": 34,
                  },
                },
                "location": 35,
                "typeName": {
                  "location": 37,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int2",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "TypeCast": {
                "arg": {
                  "A_Const": {
                    "fval": {
                      "fval": "10.5",
                    },
                    "location": 47,
                  },
                },
                "location": 51,
                "typeName": {
                  "location": 53,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "float8",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "A_Const": {
                "boolval": {},
                "location": 60,
              },
            },
            {
              "TypeCast": {
                "arg": {
                  "A_Const": {
                    "ival": {
                      "ival": 4,
                    },
                    "location": 67,
                  },
                },
                "location": 68,
                "typeName": {
                  "location": 70,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int8",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "A_Const": {
                "location": 78,
                "sval": {
                  "sval": "bytea",
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 54 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "PrepareStmt": {
          "argtypes": [
            {
              "TypeName": {
                "location": 29,
                "names": [
                  {
                    "String": {
                      "sval": "nonexistenttype",
                    },
                  },
                ],
                "typemod": -1,
              },
            },
          ],
          "name": "q4",
          "query": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 56,
                    "val": {
                      "ParamRef": {
                        "location": 56,
                        "number": 1,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 57 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "PrepareStmt": {
          "argtypes": [
            {
              "TypeName": {
                "location": 40,
                "names": [
                  {
                    "String": {
                      "sval": "pg_catalog",
                    },
                  },
                  {
                    "String": {
                      "sval": "int4",
                    },
                  },
                ],
                "typemod": -1,
              },
            },
            {
              "TypeName": {
                "location": 45,
                "names": [
                  {
                    "String": {
                      "sval": "text",
                    },
                  },
                ],
                "typemod": -1,
              },
            },
          ],
          "name": "q5",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 69,
                    "relname": "tenk1",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "sortClause": [
                {
                  "SortBy": {
                    "location": -1,
                    "node": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "unique1",
                            },
                          },
                        ],
                        "location": 121,
                      },
                    },
                    "sortby_dir": "SORTBY_DEFAULT",
                    "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                  },
                },
              ],
              "targetList": [
                {
                  "ResTarget": {
                    "location": 62,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "A_Star": {},
                          },
                        ],
                        "location": 62,
                      },
                    },
                  },
                },
              ],
              "whereClause": {
                "BoolExpr": {
                  "args": [
                    {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "lexpr": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "unique1",
                                },
                              },
                            ],
                            "location": 81,
                          },
                        },
                        "location": 89,
                        "name": [
                          {
                            "String": {
                              "sval": "=",
                            },
                          },
                        ],
                        "rexpr": {
                          "ParamRef": {
                            "location": 91,
                            "number": 1,
                          },
                        },
                      },
                    },
                    {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "lexpr": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "stringu1",
                                },
                              },
                            ],
                            "location": 97,
                          },
                        },
                        "location": 106,
                        "name": [
                          {
                            "String": {
                              "sval": "=",
                            },
                          },
                        ],
                        "rexpr": {
                          "ParamRef": {
                            "location": 108,
                            "number": 2,
                          },
                        },
                      },
                    },
                  ],
                  "boolop": "OR_EXPR",
                  "location": 94,
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 62 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateTableAsStmt": {
          "into": {
            "onCommit": "ONCOMMIT_NOOP",
            "rel": {
              "inh": true,
              "location": 24,
              "relname": "q5_prep_results",
              "relpersistence": "t",
            },
          },
          "objtype": "OBJECT_TABLE",
          "query": {
            "ExecuteStmt": {
              "name": "q5",
              "params": [
                {
                  "A_Const": {
                    "ival": {
                      "ival": 200,
                    },
                    "location": 54,
                  },
                },
                {
                  "A_Const": {
                    "location": 59,
                    "sval": {
                      "sval": "DTAAAA",
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 63 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 15,
                "relname": "q5_prep_results",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 64 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateTableAsStmt": {
          "into": {
            "onCommit": "ONCOMMIT_NOOP",
            "rel": {
              "inh": true,
              "location": 24,
              "relname": "q5_prep_nodata",
              "relpersistence": "t",
            },
            "skipData": true,
          },
          "objtype": "OBJECT_TABLE",
          "query": {
            "ExecuteStmt": {
              "name": "q5",
              "params": [
                {
                  "A_Const": {
                    "ival": {
                      "ival": 200,
                    },
                    "location": 53,
                  },
                },
                {
                  "A_Const": {
                    "location": 58,
                    "sval": {
                      "sval": "DTAAAA",
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 66 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 15,
                "relname": "q5_prep_nodata",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 67 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "PrepareStmt": {
          "name": "q6",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 92,
                    "relname": "tenk1",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 85,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "A_Star": {},
                          },
                        ],
                        "location": 85,
                      },
                    },
                  },
                },
              ],
              "whereClause": {
                "BoolExpr": {
                  "args": [
                    {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "lexpr": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "unique1",
                                },
                              },
                            ],
                            "location": 104,
                          },
                        },
                        "location": 112,
                        "name": [
                          {
                            "String": {
                              "sval": "=",
                            },
                          },
                        ],
                        "rexpr": {
                          "ParamRef": {
                            "location": 114,
                            "number": 1,
                          },
                        },
                      },
                    },
                    {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "lexpr": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "stringu1",
                                },
                              },
                            ],
                            "location": 121,
                          },
                        },
                        "location": 130,
                        "name": [
                          {
                            "String": {
                              "sval": "=",
                            },
                          },
                        ],
                        "rexpr": {
                          "ParamRef": {
                            "location": 132,
                            "number": 2,
                          },
                        },
                      },
                    },
                  ],
                  "boolop": "AND_EXPR",
                  "location": 117,
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 71 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "PrepareStmt": {
          "argtypes": [
            {
              "TypeName": {
                "location": 12,
                "names": [
                  {
                    "String": {
                      "sval": "unknown",
                    },
                  },
                ],
                "typemod": -1,
              },
            },
          ],
          "name": "q7",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 42,
                    "relname": "road",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 35,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "A_Star": {},
                          },
                        ],
                        "location": 35,
                      },
                    },
                  },
                },
              ],
              "whereClause": {
                "A_Expr": {
                  "kind": "AEXPR_OP",
                  "lexpr": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "thepath",
                          },
                        },
                      ],
                      "location": 53,
                    },
                  },
                  "location": 61,
                  "name": [
                    {
                      "String": {
                        "sval": "=",
                      },
                    },
                  ],
                  "rexpr": {
                    "ParamRef": {
                      "location": 63,
                      "number": 1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 73 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "PrepareStmt": {
          "name": "q8",
          "query": {
            "UpdateStmt": {
              "relation": {
                "inh": true,
                "location": 45,
                "relname": "tenk1",
                "relpersistence": "p",
              },
              "targetList": [
                {
                  "ResTarget": {
                    "location": 55,
                    "name": "stringu1",
                    "val": {
                      "ParamRef": {
                        "location": 66,
                        "number": 2,
                      },
                    },
                  },
                },
              ],
              "whereClause": {
                "A_Expr": {
                  "kind": "AEXPR_OP",
                  "lexpr": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "unique1",
                          },
                        },
                      ],
                      "location": 75,
                    },
                  },
                  "location": 83,
                  "name": [
                    {
                      "String": {
                        "sval": "=",
                      },
                    },
                  ],
                  "rexpr": {
                    "ParamRef": {
                      "location": 85,
                      "number": 1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 77 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 61,
                "relname": "pg_prepared_statements",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "location": 97,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 15,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "statement",
                        },
                      },
                    ],
                    "location": 15,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 26,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "parameter_types",
                        },
                      },
                    ],
                    "location": 26,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 43,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "result_types",
                        },
                      },
                    ],
                    "location": 43,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 80 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeallocateStmt": {},
      },
    },
  ],
  "version": 160001,
}
`;

exports[`prepare.sql > line 83 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 46,
                "relname": "pg_prepared_statements",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "location": 82,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 14,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "statement",
                        },
                      },
                    ],
                    "location": 14,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 25,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "parameter_types",
                        },
                      },
                    ],
                    "location": 25,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;
